Fix footer elements alignment in smallest screen size

--- a/styles/4_css-responsive.css
+++ b/styles/4_css-responsive.css
@@ -324,7 +324,8 @@
   #footer .block-small:nth-of-type(3) { width: 100%; padding-top: 0;}
   #footer > section > h1 { font-size: 40px; }
   #footer h2  { padding-left: 16px; }
-  #footer .iconList { margin-left: 0px; }
+  #facebookLikeBox { margin: 16px;}
+  #footer .iconList { margin: 16px; }
 
   #blog-posts { float: none;}
   #blog-posts img { max-width: 100%;}
